--- a/StudentManagement/manageapp/templates/employee/add-student.html
+++ b/StudentManagement/manageapp/templates/employee/add-student.html
@@ -1,4 +1,5 @@
 {% extends 'layout/base.html' %}
+{% block title %}Employee - Students{% endblock %}
 {% block content %}
 <div class="main add_student">
     <div class="main container mx-5 p-5">
