--- a/StudentManagement/manageapp/templates/layout/base.html
+++ b/StudentManagement/manageapp/templates/layout/base.html
@@ -32,9 +32,8 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-{% block js %}
-
-{% endblock %}
+<script src="{{ url_for('static', filename='js/average_scores.js') }}"></script>
+<script src="{{ url_for('static', filename='js/input_scores.js') }}"></script>
 </body>
 
 </html>
