--- a/StudentManagement/manageapp/templates/teacher/scores.html
+++ b/StudentManagement/manageapp/templates/teacher/scores.html
@@ -1,5 +1,5 @@
 {% extends 'layout/base.html' %}
-{% block title %}Employee - Students{% endblock %}
+{% block title %}Teacher - Students{% endblock %}
 {% block content %}
 
 <div class="main scores">
