--- a/StudentManagement/manageapp/templates/index.html
+++ b/StudentManagement/manageapp/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'layout/base.html' %}
+{% block title %}Home{% endblock %}
 {% block content %}
 <div class="main myIndex">
     <div class="container min-vh-100 d-flex justify-content-center align-items-center">
