--- a/StudentManagement/manageapp/templates/teacher/average-scores.html
+++ b/StudentManagement/manageapp/templates/teacher/average-scores.html
@@ -1,20 +1,36 @@
 {% extends 'layout/base.html' %}
-{% block title %}Employee - Students{% endblock %}
+{% block title %}Teacher - Students{% endblock %}
 {% block content %}
 
 <div class="main average_scores">
     <div class="container mx-5 p-5 average_scores">
         <h1 class="text-center">BẢNG ĐIỂM TRUNG BÌNH THEO NĂM</h1>
         <form action="/average_scores" method="get">
-            <div class="mb-3">
-                <label for="year" class="form-label">Năm</label>
-                <select id="year" class="form-select" name="year">
-                    {% for y in years %}
-                    <option value="{{ y.id }}" {% if request.args.year== y.id|string %} selected {% endif %}>{{ y.year
-                        }}
-                    </option>
-                    {% endfor %}
-                </select>
+            <div class="mb-3 row">
+                <div class="col-md-6 col-12">
+                    <label for="first-select" class="form-label">Năm</label>
+                    <select id="first-select" class="form-select" name="year">
+                        <option value="">Chọn năm</option>
+                        {% for y in years %}
+                        <option value="{{ y.id }}" {% if request.args.year== y.id|string %} selected {% endif %}>{{
+                            y.year
+                            }}
+                        </option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <div id="second-select-container " class="col-md-6 col-12">
+                    <label for="first-select" class="form-label">Lớp</label>
+                    <select id="second-select" class="form-select" name="m_class">
+                        <option value="">Chọn lớp</option>
+                        {% if classes %}
+                        {% for c in classes %}
+                        <option value="{{ c.id }}" {% if request.args.m_class== c.id|string %} selected {% endif %}>{{ c.name }}</option>
+                        {% endfor %}
+                        {% endif %}
+                    </select>
+                </div>
             </div>
             <div class="text-center">
                 <button type="submit" class="btn btn-dark my-2 text-center px-5 py-2">OK</button>
@@ -22,7 +38,11 @@
         </form>
         {% if err_msg %}
         <div class="alert alert-info mt-3">{{ err_msg }}</div>
-        {% else %}
+        {% endif %}
+        {% if err_msg2 %}
+        <div class="alert alert-info mt-3">{{ err_msg2 }}</div>
+        {% endif %}
+        {% if err_msg == '' and err_msg2 == '' %}
         <div class="table-responsive">
             <table class="table table-bordered mt-3 bg-light n-table">
                 <thead>
